[package]
name = "distance"
version = "1.0.0"
authors = ["Malte Tammena <malte.tammena@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
edit-distance = "2.1.0"
itertools = "0.9.0"

[dependencies.clap]
version = "2.33.1"
features = ["yaml", "wrap_help"]
